# trax-by-lkn

./: .gitignore  CLAUDE.md  PRD.md  SETUP.md  package-lock.json  package.json  vite.config.ts
.agent-os/product/: decisions.md
.agent-os/specs/2025-11-08-phase1-mvp/: README.md  spec-lite.md  spec.md  tasks.md
docs/: PARALLEL_DECODING.md  build-error.txt  persistent-cache-plan.md  streaming-architecture.md
public/drone-pads/: README.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: list_devices.rs
src-tauri/src/: events.rs  lib.rs  main.rs
src-tauri/src/audio/: buffer.rs  cache.rs  decoder.rs  drone_player.rs  engine.rs  macos_backend.rs  mod.rs  multi_track.rs  multi_track_tests.rs  resampler.rs  tests.rs  types.rs
src-tauri/src/cache/: database.rs  hash.rs  manager.rs  mod.rs  types.rs
src-tauri/src/commands/: cache.rs  drone.rs  library.rs  mod.rs  playback.rs  setlists.rs  settings.rs  stems.rs  tests.rs
src-tauri/src/database/: connection.rs  mod.rs  models.rs  schema.rs  setlists.rs  settings.rs  songs.rs  stems.rs  tests.rs
src-tauri/src/import/: duplicate.rs  metadata.rs  mixdown.rs  mod.rs  stem_detection.rs  tests.rs
src/assets/: index.css
src/components/modals/: AddSongToSetlistModal.vue  ImportProgressModal.vue  ImportSongsModal.vue  NewSetlistModal.vue  PreloadProgressModal.vue  SettingsModal.vue
src/components/playback/: DronePad.vue  MasterChannel.vue  (+5 more)
src/composables/: useKeyboardShortcuts.ts
src/stores/: dronePad.ts  library.ts  modal.ts  playback.ts  setlist.ts
src/types/: library.ts
(+28 files in other folders)
