[package]
name = "trax"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trax_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio Engine
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
crossbeam-channel = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.11"  # Higher-level CoreAudio wrapper
core-foundation = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Utilities
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
chrono = "0.4"
rayon = "1.10"
sha2 = "0.10"
dirs = "5.0"
hound = "3.5"
tokio = { version = "1", features = ["time"] }
futures = "0.3"

